--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -21,6 +22,5 @@
     "passport-local": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
