--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^1.9.12",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "date-fns": "^2.16.0",
@@ -19,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
+    "multer": "^1.4.2",
     "next": "9.5.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
