--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   "dependencies": {
     "@reach/combobox": "^0.11.0",
     "@react-google-maps/api": "^1.9.12",
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "date-fns": "^2.16.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.14",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.28.0",
     "mongoose": "^5.10.2",
     "multer": "^1.4.2",
     "next": "9.5.2",
+    "os": "^0.1.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
