--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
+    "heroku-ssl-redirect": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.28.0",
     "mongoose": "^5.10.2",
