--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-local": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "sass": "^1.32.8",
     "use-places-autocomplete": "^1.3.10"
   },
   "devDependencies": {
