--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.10.2",
     "multer": "^1.4.2",
     "next": "9.5.2",
+    "next-pwa": "^5.2.15",
     "os": "^0.1.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
